# MyTools

./: .gitignore  README.md
.github/: ACTIONS-README.md
.github/workflows/: build-release.yml
color-clicker/: Cargo.toml  README.md  config.json  installer.nsi
color-clicker/src/: app.rs  click.rs  config.rs  main.rs  screen.rs
mac-tools/: README.md
mac-tools/color-clicker/: .gitignore  BUILD-GUIDE.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  config.json  run.sh
mac-tools/color-clicker/src/: app.rs  color.rs  config.rs  main.rs
mac-tools/color-clicker/tests/: check_format.rs  check_method.rs  check_scale.rs  mouse_color.rs  test_colors.rs
resources/: README.md
shared/: README.md
ubuntu-tools/: README.md
ubuntu-tools/color-clicker/: BUILD-GUIDE.md  Cargo.toml  PROJECT-SUMMARY.md  QUICK-START.sh  README.md  check-permissions.sh  config.json  run.sh
ubuntu-tools/color-clicker/src/: app.rs  click.rs  main.rs  screen.rs  window.rs
ubuntu-tools/color-clicker/tests/: test_colors.rs
windows-tools/color-clicker/: Cargo.toml
windows-tools/color-clicker/src/: app.rs  click.rs  main.rs  screen.rs  window.rs
