[package]
name = "color-clicker"
version = "0.4.0"
edition = "2021"
description = "悬浮框颜色检测自动点击工具 (跨平台)"
license = "MIT"

[dependencies]
# GUI 框架
eframe = "0.28"
egui = "0.28"

# 鼠标控制
enigo = "0.2"

# 配置序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 时间处理
chrono = "0.4"

# 日志
log = "0.4"
env_logger = "0.11"

# 图像处理（用于图标）
image = "0.25"

# 平台特定依赖 - Linux
[target.'cfg(target_os = "linux")'.dependencies]
xcap = "0.0.14"
x11 = { version = "2.21", features = ["xlib"] }

# 平台特定依赖 - macOS & Windows
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
screenshots = "0.8"

# 平台特定依赖 - Windows 独有
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

